@@ -17,24 +17,35 @@ module Wice
     #   * <tt>:no</tt> or <tt>false</tt>     - never show the filter
     # * <tt>:upper_pagination_panel</tt> - a boolean value which defines whether there is an additional pagination
     #   panel on top of the table. By default it is false.
-    # * <tt>:extra_request_parameters</tt> - a hash which will be added as additional HTTP request parameters to all links generated by the grid,
-    #   be it sorting links, filters, or the 'Reset Filter' icon. Please note that WiceGrid respects and retains all request parameters already
-    #   present in the URL which formed the page, so there is no need to enumerate them in <tt>:extra_request_parameters</tt>. A typical
-    #   usage of <tt>:extra_request_parameters</tt> is a page with javascript tabs - changing the active tab does not reload the page, but if
-    #   one such tab contains a WiceGrid, it could be required that if the user orders or filters the grid, the result page should have the tab
-    #   with the grid activated. For this we need to send an additional parameter specifying from which tab the request was generated.
-    # * <tt>:sorting_dependant_row_cycling</tt> - When set to true (by default it is false) the row styles +odd+ and +even+ will be changed
-    #   only when the content of the cell belonging to the sorted column changes. In other words, rows with identical values in the ordered
-    #   column will have the same style (color).
-    # * <tt>:erb_mode</tt> - can be <tt>true</tt> or <tt>false</tt>. Defines the style of the helper method in the view. The default is <tt>false</tt>.
+    # * <tt>:extra_request_parameters</tt> - a hash which will be added as additional HTTP request parameters to all
+    #   links generated by the grid, be it sorting links, filters, or the 'Reset Filter' icon.
+    #   Please note that WiceGrid respects and retains all request parameters already present in the URL which
+    #   formed the page, so there is no need to enumerate them in <tt>:extra_request_parameters</tt>. A typical
+    #   usage of <tt>:extra_request_parameters</tt> is a page with javascript tabs - changing the active tab
+    #   does not reload the page, but if one such tab contains a WiceGrid, it could be required that if the user
+    #   orders or filters the grid, the result page should have the tab with the grid activated. For this we
+    #   need to send an additional parameter specifying from which tab the request was generated.
+    # * <tt>:sorting_dependant_row_cycling</tt> - When set to true (by default it is false) the row styles +odd+
+    #   and +even+ will be changed only when the content of the cell belonging to the sorted column changes.
+    #   In other words, rows with identical values in the ordered column will have the same style (color).
+    # * <tt>:erb_mode</tt> - can be <tt>true</tt> or <tt>false</tt>. Defines the style of the helper method
+    #   in the view. The default is <tt>false</tt>.
     # * <tt>:allow_showing_all_records</tt> - allow or prohibit the "All Records" mode.
-    # * <tt>:hide_reset_button</tt> - Do not show the Filter Reset button.
-    # * <tt>:hide_submit_button</tt> - Do not show the Filter Submit button.
+    # * <tt>:hide_reset_button</tt> - Do not show the default Filter Reset button. 
+    #   Useful when using a custom reset button (helper +reset_grid_javascript+).
+    #   By default it is false.
+    # * <tt>:hide_submit_button</tt> - Do not show the default Filter Submit button.
+    #   Useful when using a custom submit button (helper +submit_grid_javascript+).
+    #   By default it is false.
+    # * <tt>:hide_csv_button</tt> - a boolean value which defines whether the default Export To CSV button 
+    #   should be rendered. Useful when using a custom Export To CSV button (helper +export_to_csv_javascript+).
+    #   By default it is false.    
     #   Please read README for more insights.
     #
-    # The block contains definitions of grid columns using the +column+ method sent to the object yielded into the block. In other words,
-    # the value returned by each of the blocks defines the content of a cell, the first block is called for cells of the first column
-    # for each row (each ActiveRecord instance), the second block is called for cells of the second column, and so on. See the example:
+    # The block contains definitions of grid columns using the +column+ method sent to the object yielded into
+    # the block. In other words, the value returned by each of the blocks defines the content of a cell, the
+    # first block is called for cells of the first column for each row (each ActiveRecord instance), the
+    # second block is called for cells of the second column, and so on. See the example:
     #
     #   <%= grid(@accounts_grid, :table_html_attrs => {:class => 'grid_style', :id => 'accounts_grid'}, :header_tr_html_attrs => {:class => 'grid_headers'}) do |g|
     #
@@ -119,6 +130,7 @@ module Wice
         :header_tr_html_attrs          => {},
         :hide_reset_button             => false,
         :hide_submit_button            => false,
+        :hide_csv_button               => false,
         :show_filters                  => Defaults::SHOW_FILTER,
         :sorting_dependant_row_cycling => false,
         :table_html_attrs              => {},
@@ -239,7 +251,7 @@ module Wice
 
       pagination_panel_content_html, pagination_panel_content_js = nil, nil
       if options[:upper_pagination_panel]
-        content << rendering.pagination_panel(no_rightmost_column) do
+        content << rendering.pagination_panel(no_rightmost_column, options[:hide_csv_button]) do
           pagination_panel_content_html, pagination_panel_content_js =
             pagination_panel_content(grid, options[:extra_request_parameters], options[:allow_showing_all_records])
           pagination_panel_content_html
@@ -264,13 +276,13 @@ module Wice
       cached_javascript = []
 
       rendering.each_column_aware_of_one_last_one(:in_html) do |column, last|
-        
+
         column_name = column.column_name
         if column_name.is_a? Array
           column_name, js = column_name
           cached_javascript << js
         end
-        
+
         if column.attribute_name && column.allow_ordering
 
           css_class = grid.filtered_by?(column) ? 'active_filter' : nil
@@ -370,11 +382,11 @@ module Wice
       end
 
       content << '</thead><tfoot>'
-      content << rendering.pagination_panel(no_rightmost_column) do
+      content << rendering.pagination_panel(no_rightmost_column, options[:hide_csv_button]) do
         if pagination_panel_content_html
           pagination_panel_content_html
         else
-          pagination_panel_content_html, pagination_panel_content_js = 
+          pagination_panel_content_html, pagination_panel_content_js =
             pagination_panel_content(grid, options[:extra_request_parameters], options[:allow_showing_all_records])
           pagination_panel_content_html
         end
@@ -406,7 +418,7 @@ module Wice
           cell_block = column.cell_rendering_block
 
           opts = column.td_html_attrs.clone
-          
+
           column_block_output = if column.class == Wice::ActionViewColumn
             cell_block.call(ar, params)
           else
@@ -504,7 +516,7 @@ module Wice
                              %/   })\n/+
                              %/ });\n/
       end
-      
+
       if rendering.submit_button_present
         cached_javascript << %/ $$('div##{grid.name}.wice_grid_container .submit').each(function(e){\n/+
                              %/   e.observe('click', function(){\n/+
@@ -593,7 +605,7 @@ module Wice
           :style => styles[1],
           :class => 'clickable'
         )
-        
+
         hide_icon + show_icon
       end
     end
@@ -652,6 +664,17 @@ module Wice
       "#{grid.name}.reset()"
     end
 
+    # Returns javascript which triggers export to CSV.
+    # The parameter is a WiceGrid instance. Use it with +button_to_function+ to create
+    # your own Export To CSV button.
+    def export_to_csv_javascript(grid)
+      unless grid.kind_of? WiceGrid
+        raise WiceGridArgumentError.new("export_csv_javascript: the parameter must be a WiceGrid instance.")
+      end
+      "#{grid.name}.export_to_csv()"
+    end
+
+
     def grid_csv(grid, rendering) #:nodoc:
 
 
@@ -690,11 +713,11 @@ module Wice
 
       html, js = pagination_info(grid, allow_showing_all_records)
 
-      [will_paginate(grid.resultset, 
+      [will_paginate(grid.resultset,
         :renderer       => 'Wice::LinkRenderer',
         :previous_label => WiceGridNlMessageProvider.get_message(:PREVIOUS_LABEL),
         :next_label     => WiceGridNlMessageProvider.get_message(:NEXT_LABEL),
-        :param_name     => "#{grid.name}[page]", 
+        :param_name     => "#{grid.name}[page]",
         :params         => extra_request_parameters).to_s +
         (' <div class="pagination_status">' + html + '</div>').html_safe_if_necessary, js]
     end
@@ -762,7 +785,7 @@ module Wice
       else
         ''
       end
-      
+
       [html, js]
     end
 
